Include new service and update paths based on move js files

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -29,7 +29,6 @@
         <script src="app/components/conversation/conversation.controller.js"></script>
 
         <script src="app/components/home/home.js"></script>
-        <script src="app/components/home/detail/detail.controller.js"></script>
         <script src="app/components/home/timeline/timeline.js"></script>
         <script src="app/components/home/timeline/timeline.controller.js"></script>
         <script src="app/components/home/mentions/mentions.js"></script>
@@ -49,10 +48,7 @@
 
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
-
-        <script src="app/components/profile/profile.js"></script>
-        <script src="app/components/profile/profile.controller.js"></script>
-
+        
         <script src="app/shared/services/service.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
@@ -60,6 +56,11 @@
         <script src="app/shared/services/HomeService.js"></script>
         <script src="app/shared/services/login.service.js"></script>
         <script src="app/shared/services/path.service.js"></script>
+
+        <script src="app/shared/state/status/status.state.service.js"></script>
+        <script src="app/shared/state/status/status.controller.js"></script>
+
+        <script src="app/shared/state/profile/profile.controller.js"></script>
 
         <script src="app/shared/status/status.directive.js"></script>
         <script src="app/shared/conversation/conversation.directive.js"></script>
