--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -48,7 +48,10 @@
 
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
-        
+
+        <script src="app/shared/providers/provider.js"></script>
+        <script src="app/shared/providers/status.state.provider.js"></script>
+
         <script src="app/shared/services/service.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
@@ -57,9 +60,7 @@
         <script src="app/shared/services/login.service.js"></script>
         <script src="app/shared/services/path.service.js"></script>
 
-        <script src="app/shared/state/status/status.state.service.js"></script>
         <script src="app/shared/state/status/status.controller.js"></script>
-
         <script src="app/shared/state/profile/profile.controller.js"></script>
 
         <script src="app/shared/status/status.directive.js"></script>
