--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,6 +88,7 @@
     <script src="scripts/components/auth/services/activate.service.js"></script>
     <script src="scripts/components/auth/services/password.service.js"></script>
     <script src="scripts/components/auth/services/register.service.js"></script>
+    <script src="scripts/components/auth/services/profile.service.js"></script>
     <script src="scripts/components/form/form.directive.js"></script>
     <script src="scripts/components/form/maxbytes.directive.js"></script>
     <script src="scripts/components/form/minbytes.directive.js"></script>
@@ -157,6 +158,7 @@
     <script src="scripts/components/language/language.controller.js"></script>
     <script src="scripts/components/auth/provider/auth.xauth.service.js"></script>
     <script src="scripts/app/account/profile/profile.controller.js"></script>
+
     <!-- endbuild -->
 
     <script src="scripts/app/about/about.js"></script>
