--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,12 @@
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
+
        <link rel="stylesheet" href="assets/styles/tatami.css">
+
+
+        <link rel="stylesheet" href="assets/styles/tatami.css">
+
         <!-- endbuild -->
 
         <style>
