--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -5,7 +5,7 @@
             <!-- The nagivation sidebar -->
             <div id="navigation">
                 <div>
-                    <div class="col-span-4 alert">
+                    <div class="col-lg-4 alert">
 
                             <div id="avatar">
                                 <div class="row text-center nomargin avatar-float-center-container">
@@ -77,7 +77,7 @@
                                     </li>
                                 </ul>
                             </div>
-                                
+
 
                     </div>
                 </div>
