Add service to handle refreshing users

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -65,7 +65,8 @@
 
         <script src="app/shared/status/status.directive.js"></script>
         <script src="app/shared/conversation/conversation.directive.js"></script>
-        <script src="app/shared/status/refresher/status.refresher.service.js"></script>
+        <script src="app/shared/status/status.refresher.service.js"></script>
+        <script src="app/shared/user/user.refresher.service.js"></script>
         <script src="app/shared/user/user.directive.js"></script>
         <script src="app/shared/user/user.detail.directive.js"></script>
         <script src="app/components/post/postbar.directive.js"></script>
