Add pull to refresh to update a profile timeline

--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Profile">
     <ion-content>
+        <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
         <tatami-user-detail user="vm.user"></tatami-user-detail>
         <ion-list>
             <ion-item ng-repeat="status in vm.statuses">
