--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,10 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
+        <link href="assets/bower_components/ment.io/ment.io/styles.css" rel="stylesheet" type="text/css">
+        <link href="assets/bower_components/ngtoast/dist/ngToast.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/vendor/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="assets/bower_components/bootstrap-tour/build/css/bootstrap-tour.css" rel="stylesheet" type="text/css">
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
@@ -173,6 +177,10 @@
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
+    <script src="scripts/app/account/preferences/preferences.controller.js"></script>
+    <script src="scripts/app/account/preferences/preferences.js"></script>
+    <script src="scripts/components/auth/services/preferences.service.js"></script>
+
 
 </body>
 </html>
