Directive to handle managing a list of statuses

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -63,6 +63,7 @@
         <script src="app/shared/state/status/status.controller.js"></script>
         <script src="app/shared/state/profile/profile.controller.js"></script>
 
+        <script src="app/shared/status/list/status.list.directive.js"></script>
         <script src="app/shared/status/status.directive.js"></script>
         <script src="app/shared/conversation/conversation.directive.js"></script>
         <script src="app/shared/status/status.refresher.service.js"></script>
