Updated password page to also require old password. Also updated User and UserDTO to reflect new constructor arguments.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -167,6 +167,8 @@
     <script src="scripts/components/language/language.controller.js"></script>
     <script src="scripts/components/auth/provider/auth.xauth.service.js"></script>
     <script src="scripts/app/account/profile/profile.controller.js"></script>
+        <script src="scripts/app/account/password/password.controller.js"></script>
+        <script src="scripts/app/account/password/password.js"></script>
 
     <!-- endbuild -->
 
