Updated translatation for password page

--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -2,30 +2,30 @@
     <div class="alert alert-status">
         <div>
             <form class="form-horizontal row-fluid">
-                <h2 translate="tatami.account.password.title"></h2>
+                <h2 translate="account.password.title"></h2>
                 <fieldset>
-                    <legend translate="tatami.account.password.update"></legend>
+                    <legend translate="account.password.update"></legend>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.account.password.old"></label>
+                        <label class="control-label" translate="account.password.old"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.oldPassword">
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.account.password.new"></label>
+                        <label class="control-label" translate="account.password.new"></label>
                         <div class="controls">
                             <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.account.password.confirm"></label>
+                        <label class="control-label" translate="account.password.confirm"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
                         </div>
                     </div>
                     <div class="return"></div>
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary btn-block" translate="tatami.form.save" ng-click="changePassword()"></button>
+                        <button type="submit" class="btn btn-primary btn-block" translate="account.form.save" ng-click="changePassword()"></button>
                     </div>
                 </fieldset>
             </form>
