Groups management page, see description
NOT FULLY WORKING
Only the groups the user belong to are showed.
Two tables are created for groups management.
ElasticSearch need to be implemented for searching groups.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,6 +113,8 @@
     <script src="scripts/components/navbar/navbar.directive.js"></script>
     <script src="scripts/components/navbar/navbar.controller.js"></script>
     <script src="scripts/components/user/user.service.js"></script>
+    <script src="scripts/components/user/groups.service.js"></script>
+    <script src="scripts/components/user/search.service.js"></script>
     <script src="scripts/components/util/truncate.filter.js"></script>
     <script src="scripts/components/util/base64.service.js"></script>
     <script src="scripts/components/util/capitalize.filter.js"></script>
@@ -123,6 +125,10 @@
     <script src="scripts/components/util/data-util.service.js"></script>
     <script src="scripts/components/util/sort.directive.js"></script>
     <script src="scripts/app/account/account.js"></script>
+    <script src="scripts/app/account/form.controller.js"></script>
+    <script src="scripts/app/account/groups/groups.controller.js"></script>
+    <script src="scripts/app/account/groups/creation/groups.create.controller.js"></script>
+    <script src="scripts/app/account/groups/list/groups.list.controller.js"></script>
     <script src="scripts/app/login/activate/activate.js"></script>
     <script src="scripts/app/login/activate/activate.controller.js"></script>
     <script src="scripts/app/login/login.js"></script>
