--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -57,7 +57,7 @@
                                             <span translate="account.users.title"></span>
                                         </a>
                                     </li>
-                                    <li ng-class="{ 'active': $state.current.name.indexOf('account.groups') != -1 }">
+                                    <li ui-sref-active="active">
                                         <a ui-sref="account.groups">
                                             <span class="glyphicon glyphicon-th-large"></span>
                                             <span translate="account.groups.title"></span>
