--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -28,13 +28,13 @@
                             <div class="tabbable alert alert-status">
                                 <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                     <li ui-sref-active="active">
-                                        <a ui-sref="profile">
+                                        <a ui-sref="account.profile">
                                             <span class="glyphicon glyphicon-user"></span>
                                             <span translate="account.profile.title"></span>
                                         </a>
                                     </li>
                                     <li ui-sref-active="active">
-                                        <a ui-sref="preferences">
+                                        <a ui-sref="account.preferences">
                                             <span class="glyphicon glyphicon-cog"></span>
                                             <span translate="account.preferences.title"></span>
                                         </a>
