Use login controller to start the google auth process, then store the token in local storage

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -52,6 +52,8 @@
         <script src="app/shared/providers/provider.js"></script>
         <script src="app/shared/providers/tatami.state.provider.js"></script>
 
+        <script src="app/shared/interceptor/auth.interceptor.js"></script>
+
         <script src="app/shared/services/service.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
@@ -59,6 +61,7 @@
         <script src="app/shared/services/HomeService.js"></script>
         <script src="app/shared/services/login.service.js"></script>
         <script src="app/shared/services/path.service.js"></script>
+        <script src="app/shared/services/localStorage.service.js"></script>
 
         <script src="app/shared/state/status/status.controller.js"></script>
         <script src="app/shared/state/profile/profile.controller.js"></script>
