--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -71,7 +71,7 @@
                 <div class="control-group dashed">
                     <label class="control-label"></label>
                     <div class="controls">
-                        <div class="dropzone well" ng-file-select ng-file-drop ng-model="current.avatar">
+                        <div class="dropzone well" ngf-select ngf-drop ng-model="current.avatar">
                             <p class="little-padding-top" translate="account.profile.dropPhoto"></p>
                             <!--
                             <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
