Added markdown filter and emoticon filter for status posts on the timeline.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -188,6 +188,9 @@
     <script src="scripts/app/home/timeline/statusList.controller.js"></script>
     <script src="scripts/app/home/presentation/presentation.js"></script>
     <script src="scripts/app/home/presentation/welcome.controller.js"></script>
+    <script src="scripts/app/shared/filters/EmoticonFilter.js"></script>
+    <script src="scripts/app/shared/filters/MarkdownFilter.js"></script>
+    <script src="bower_components/swagger-ui/lib/marked.js"></script>
 
 </body>
 </html>
