--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div>
+        <div class = well>
             <form class="form-horizontal row-fluid">
                 <h2 translate="account.password.title"></h2>
                 <fieldset>
