--- a/src/main/webapp/scripts/app/account/preferences/preferences.html
+++ b/src/main/webapp/scripts/app/account/preferences/preferences.html
@@ -1,6 +1,6 @@
 <div class="col-lg-8">
     <div class="alert alert-status">
-        <div>
+        <div class = well>
             <form class="form-horizontal row-fluid">
                 <h2 translate="global.account.preferences.title"></h2>
                 <legend translate="global.account.preferences.notifications"></legend>
