--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -174,6 +174,11 @@
 
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
+        <script src="scripts/app/account/files/files.js"></script>
+        <script src="scripts/app/account/groups/groups.js"></script>
+        <script src="scripts/app/account/users/users.js"></script>
+        <script src="scripts/app/account/topPosters/topPosters.js"></script>
+        <script src="scripts/app/account/tags/tags.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
     <script src="scripts/app/account/preferences/preferences.js"></script>
