--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -1,6 +1,6 @@
 <div class="col-lg-8">
     <div class="alert alert-status">
-
+<div class = well>
         <!--
 
             <form>
@@ -88,7 +88,7 @@
                 <label for="login" class="col-sm-2 control-label" translate="account.profile.email"></label>
                 <div class="col-sm-10">
                     <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userProfile.email" >
-                    
+
                 </div>
             </div>
             <div class="form-group">
@@ -137,6 +137,6 @@
                 </fieldset>
             </form>
             -->
-
+</div>
     </div>
 </div>
