--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -175,10 +175,12 @@
 
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
-    <script src="scripts/app/account/files/files.js"></script>
         <script src="scripts/app/account/tags/tags.js"></script>
         <script src="scripts/app/account/tags/TagsController.js"></script>
+        <script src="scripts/app/account/files/files.js"></script>
+        <script src="scripts/app/account/files/files.controller.js"></script>
         <script src="scripts/app/account/users/users.js"></script>
+        <script src="scripts/app/account/users/users.controller.js"></script>
         <script src="scripts/app/account/groups/groups.js"></script>
         <script src="scripts/app/account/topPosters/topPosters.js"></script>
 
