--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -14,7 +14,7 @@
                     <div class="control-group">
                         <label class="control-label" translate="account.password.new"></label>
                         <div class="controls">
-                            <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
+                            <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
                         </div>
                     </div>
                     <div class="control-group">
