--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -64,6 +64,32 @@
             </form>
         </div>
 
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="firstName" class="col-sm-2 control-label">First Name</label>
+                <div class="col-sm-10">
+                    <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="lastName" class="col-sm-2 control-label">Last Name</label>
+                <div class="col-sm-10">
+                    <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.lastName">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="jobTitle" class="col-sm-2 control-label">Job Title</label>
+                <div class="col-sm-10">
+                    <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-lg-12" ng-model="userProfile.jobTitle">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="phoneNumber" class="col-sm-2 control-label">Phone Number</label>
+                <div class="col-sm-10">
+                    <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-lg-12" ng-model="userProfile.phoneNumber">
+                </div>
+            </div>
 
         <!-- Disabled for now until backend handles deleting accounts properly
         <form>
