--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -22,6 +22,8 @@
         <!-- your app's js -->
         <script src="app/tatamiApp.js"></script>
         <script src="app/tatamiApp.constants.js"></script>
+        <script src="app/tatami.controller.js"></script>
+
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
 
