Added Account controllers, fixed some formatting

--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -20,7 +20,7 @@
                                     <br>
                                     <div>
                                         <a ui-sref="home.profile.statuses({ username: profile.username })">
-                                            <h3 class="user-profile">{{ profile.firstName + ' ' + profile.lastName }}</h3>
+                                            <h3 class="user-profile">{{ userProfile.firstName + ' ' + profile.lastName }}</h3>
                                         </a>
                                         <a ui-sref="home.profile.statuses({ username: profile.username })">
                                             <p>@{{ profile.username }}</p>
