--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -1,4 +1,4 @@
-<div class="col-span-8">
+<div class="col-lg-8">
     <div class="alert alert-status">
         <div class = well>
             <form class="form-horizontal row-fluid">
