--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -1,9 +1,9 @@
 <div class="col-lg-8">
+    {{userProfile.email}}
     <div class="alert alert-status">
-<div class = well>
-        <!--
 
-            <form>
+        <div class = well>
+            <form class="form-horizontal">
                 <h2 translate="account.profile.title"></h2>
                 <fieldset class="form-horizontal row-fluid">
                     <div class="control-group dashed">
@@ -11,7 +11,9 @@
                         <div class="controls">
                             <div class="dropzone well" ng-file-select ng-file-drop ng-model="current.avatar">
                                 <p class="little-padding-top" translate="account.profile.dropPhoto"></p>
-
+                                <!--
+                                <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
+                                -->
                             </div>
                             <div ng-style="{ visibility: uploadStatus.isUploading ? 'visible': 'hidden' }" class="attachmentBar progress progress-striped active">
                                 <div class="bar progress-bar progress-bar-info" style="width: {{ uploadStatus.progress }}%;"></div>
@@ -19,124 +21,62 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset class="form-horizontal row-fluid">
-                    <legend translate="account.profile.update"></legend>
-                    <div class="control-group">
-                        <label class="control-label" for="login" translate="account.profile.email"></label>
-                        <div class="controls">
+                <legend translate="account.profile.update"></legend>
+                <div class="form-group">
+                    <label for="login" class="col-sm-2 control-label" translate="account.profile.email"></label>
+                    <div class="col-sm-10">
+                        <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userProfile.email" >
 
-                            <input name="login" type="text" disabled="true" class="col-span-12" ng-model="userProfile.email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="firstName" class="col-sm-2 control-label">First Name</label>
+                    <div class="col-sm-10">
+                        <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lastName" class="col-sm-2 control-label">Last Name</label>
+                    <div class="col-sm-10">
+                        <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.lastName">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="jobTitle" class="col-sm-2 control-label">Job Title</label>
+                    <div class="col-sm-10">
+                        <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-lg-12" ng-model="userProfile.jobTitle">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber" class="col-sm-2 control-label">Phone</label>
+                    <div class="col-sm-10">
+                        <input name="phoneNumber" type="text" size="10" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.phoneNumber">
+                    </div>
+                </div>
 
-                            <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userLogin">
 
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" for="firstName" translate="account.profile.firstName">
-                        </label>
-                        <div class="controls">
 
-                            <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
-                        </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="input-xlarge btn btn-primary btn-block"translate="account.form.save" ng-click="updateUser()"></button>
                     </div>
-                    <div class="control-group">
-                        <label class="control-label" for="lastName" translate="account.profile.lastName"></label>
-                        <div class="controls">
-                            <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.lastName">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" for="jobTitle" translate="account.profile.jobTitle"></label>
-                        <div class="controls">
-                            <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-lg-12" ng-model="userProfile.jobTitle">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" for="phoneNumber" translate="account.profile.phoneNumber"></label>
-                        <div class="controls">
-                            <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-lg-12" ng-model="userProfile.phoneNumber">
-                        </div>
-                    </div>
-                    <div class="return"></div>
-                    <div class="form-actions">
-                        <button type="submit" class="input-xlarge btn btn-primary btn-block" translate="account.form.save" ng-click="updateUser()"></button>
-                    </div>
-                </fieldset>
+                </div>
             </form>
+        </div>
 
--->
-        <form class="form-horizontal">
-            <h2 translate="account.profile.title"></h2>
+
+        <!-- Disabled for now until backend handles deleting accounts properly
+        <form>
             <fieldset class="form-horizontal row-fluid">
-                <div class="control-group dashed">
-                    <label class="control-label"></label>
-                    <div class="controls">
-                        <div class="dropzone well" ng-file-select ng-file-drop ng-model="current.avatar">
-                            <p class="little-padding-top" translate="account.profile.dropPhoto"></p>
-                            <!--
-                            <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
-                            -->
-                        </div>
-                        <div ng-style="{ visibility: uploadStatus.isUploading ? 'visible': 'hidden' }" class="attachmentBar progress progress-striped active">
-                            <div class="bar progress-bar progress-bar-info" style="width: {{ uploadStatus.progress }}%;"></div>
-                        </div>
-                    </div>
+                <legend translate="account.profile.delete"></legend>
+                <div class="return"></div>
+                <div class="form-actions">
+                    <button type="submit" class="input-xlarge btn btn-danger btn-block" ng-click="deleteUser(('account.profile.confirmDelete' | translate))" translate="account.profile.delete">
+                    </button>
                 </div>
             </fieldset>
-            <legend translate="account.profile.update"></legend>
-            <div class="form-group">
-                <label for="login" class="col-sm-2 control-label" translate="account.profile.email"></label>
-                <div class="col-sm-10">
-                    <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userProfile.email" >
-
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="firstName" class="col-sm-2 control-label">First Name</label>
-                <div class="col-sm-10">
-                    <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="lastName" class="col-sm-2 control-label">Last Name</label>
-                <div class="col-sm-10">
-                    <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.lastName">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="jobTitle" class="col-sm-2 control-label">Job Title</label>
-                <div class="col-sm-10">
-                    <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-lg-12" ng-model="userProfile.jobTitle">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="phoneNumber" class="col-sm-2 control-label">Phone Number</label>
-                <div class="col-sm-10">
-                    <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-lg-12" ng-model="userProfile.phoneNumber">
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="input-xlarge btn btn-primary btn-block"translate="account.form.save" ng-click="updateUser()"></button>
-                </div>
-            </div>
         </form>
+        -->
 
-
-            <!-- Disabled for now until backend handles deleting accounts properly
-            <form>
-                <fieldset class="form-horizontal row-fluid">
-                    <legend translate="account.profile.delete"></legend>
-                    <div class="return"></div>
-                    <div class="form-actions">
-                        <button type="submit" class="input-xlarge btn btn-danger btn-block" ng-click="deleteUser(('account.profile.confirmDelete' | translate))" translate="account.profile.delete">
-                        </button>
-                    </div>
-                </fieldset>
-            </form>
-            -->
-</div>
     </div>
 </div>
