--- a/src/main/webapp/scripts/app/shared/sidebar/home/homeSidebar.html
+++ b/src/main/webapp/scripts/app/shared/sidebar/home/homeSidebar.html
@@ -7,12 +7,12 @@
         </div>
         <div class="well well-sm little-padding">
             <div>
-                <a class="h3" ui-sref="tatami.home.profile.statuses({ username: profile.username })">
+                <a class="h3" ui-sref="home.profile.statuses({ username: profile.username })">
                     <strong>{{ profile.firstName + ' ' + profile.lastName }}</strong>
                 </a>
             </div>
             <div>
-                <a class="h5 text-muted" ui-sref="tatami.home.profile.statuses({ username: profile.username })">
+                <a class="h5 text-muted" ui-sref="home.profile.statuses({ username: profile.username })">
                     @{{ profile.username }}
                 </a>
             </div>
@@ -37,13 +37,13 @@
             <table class="table table-condensed nomargin">
                 <tr ng-repeat="group in groups">
                     <td>
-                        <a ui-sref="tatami.home.home.group.statuses({ groupId: group.groupId })">{{ group.name }}</a>
+                        <a ui-sref="home.home.group.statuses({ groupId: group.groupId })">{{ group.name }}</a>
                     </td>
                     <td class="text-right" nowrap>
-                        <span ng-if="group.publicGroup" class="label label-warning" title="{{ 'tatami.home.sidebar.publicToolTip' | translate }}"><small translate="tatami.home.sidebar.public"></small></span>
-                        <span ng-if="!group.publicGroup" class="label label-info" title="{{ 'tatami.home.sidebar.privateToolTip' | translate }}"><small translate="tatami.home.sidebar.private"></small></span>
-                        <span ng-if="group.archivedGroup" class="label label-default" title="{{ 'tatami.home.sidebar.archivedToolTip' | translate }}"><small translate="tatami.home.sidebar.archived"></small></span>
-                        <span ng-if="group.administrator" class="label label-danger" title="{{ 'tatami.home.sidebar.administratorToolTip' | translate }}"><small translate="tatami.home.sidebar.administrator"></small></span>
+                        <span ng-if="group.publicGroup" class="label label-warning" title="{{ 'home.sidebar.publicToolTip' | translate }}"><small translate="home.sidebar.public"></small></span>
+                        <span ng-if="!group.publicGroup" class="label label-info" title="{{ 'home.sidebar.privateToolTip' | translate }}"><small translate="home.sidebar.private"></small></span>
+                        <span ng-if="group.archivedGroup" class="label label-default" title="{{ 'home.sidebar.archivedToolTip' | translate }}"><small translate="home.sidebar.archived"></small></span>
+                        <span ng-if="group.administrator" class="label label-danger" title="{{ 'home.sidebar.administratorToolTip' | translate }}"><small translate="home.sidebar.administrator"></small></span>
                     </td>
                 </tr>
             </table>
@@ -68,7 +68,7 @@
                         <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                     </span>
                     <span class="glyphicon" ng-class="tag.trendingUp ? 'glyphicon-arrow-up' : 'glyphicon-arrow-down'"></span>
-                    <a ui-sref="tatami.home.home.tag({ tag: tag.name })">#{{ tag.name }}</a>
+                    <a ui-sref="home.home.tag({ tag: tag.name })">#{{ tag.name }}</a>
                 </div>
             </div>
         </div>
@@ -94,16 +94,16 @@
                     <span ng-click="followUser(suggestion, $index)" class="pointer pull-right label" ng-class="{ 'label-info': suggestion.followingUser }">
                         <span class="glyphicon" ng-class="suggestion.followingUser ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                     </span>
-                    <a ui-sref="tatami.home.profile.statuses({ username: suggestion.username })">
+                    <a ui-sref="home.profile.statuses({ username: suggestion.username })">
                         <span class='pull-left background-image-fffix'>
                             <img class="img-rounded img-small" ng-style="{ 'background-image': 'url(' + suggestion.avatarURL + ')' }">
                         </span>
                     </a>&nbsp;
-                    <a ui-sref="tatami.home.profile.statuses({ username: suggestion.username })">
+                    <a ui-sref="home.profile.statuses({ username: suggestion.username })">
                         <strong>{{ suggestion.firstName + ' ' + suggestion.lastName }}</strong>
                     </a>
                     <br>&nbsp;
-                    <a ui-sref="tatami.home.profile.statuses({ username: suggestion.username })">
+                    <a ui-sref="home.profile.statuses({ username: suggestion.username })">
                         <small>@{{ suggestion.username }}</small>
                     </a>
                 </h6>
