--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -183,7 +183,6 @@
         <script src="scripts/app/account/users/users.controller.js"></script>
         <script src="scripts/app/account/groups/groups.js"></script>
         <script src="scripts/app/account/topPosters/topPosters.js"></script>
-
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
     <script src="scripts/app/account/preferences/preferences.js"></script>
@@ -207,8 +206,7 @@
     <script src="scripts/app/home/presentation/welcome.controller.js"></script>
     <script src="scripts/app/shared/filters/EmoticonFilter.js"></script>
     <script src="scripts/app/shared/filters/MarkdownFilter.js"></script>
-    <script src="bower_components/swagger-ui/lib/marked.js"></script>
-    <script src="scripts/app/shared/configs/MomentConfig.js"></script>
+    <script src="assets/js/marked/marked.js"></script>
     <script src="scripts/app/shared/configs/MarkedConfig.js"></script>
 
 </body>
