Added an icon to bring the user back to the timeline when on the follower page

--- a/mobile/www/app/tatami.html
+++ b/mobile/www/app/tatami.html
@@ -1,7 +1,12 @@
 <ion-header-bar class="bar-header bar-dark">
-    <div class="buttons" ng-if="!vm.$state.includes('login')">
+    <div class="buttons" ng-if="!vm.$state.includes('login') && !vm.$state.includes('follow')">
         <a ui-sref="suggested">
             <button class="button button-clear ion-android-person-add"></button>
+        </a>
+    </div>
+    <div class="buttons" ng-if="vm.$state.includes('follow')">
+        <a ui-sref="timeline">
+            <button class="button button-clear ion-ios-list"></button>
         </a>
     </div>
     <div class="title">
