--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -176,7 +176,7 @@
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
         <script src="scripts/app/account/tags/tags.js"></script>
-        <script src="scripts/app/account/tags/TagsController.js"></script>
+        <script src="scripts/app/account/tags/tags.controller.js"></script>
         <script src="scripts/app/account/files/files.js"></script>
         <script src="scripts/app/account/files/files.controller.js"></script>
         <script src="scripts/app/account/users/users.js"></script>
