Make app full-width

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,7 @@
         <![endif]-->
 
         <div ui-view="navbar" ng-cloak=""></div>
-        <div class="container">
+        <div class="container-fluid">
             <div ui-view="content"></div>
 
             <div ng-if="!$state.includes('home')" style="opacity: 0.5; text-align:center;">
