Organized timeline files. Added Mentions page.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -197,18 +197,20 @@
     <script src="scripts/shared/filters/EmoticonFilter.js"></script>
     <script src="scripts/app/home/home.js"></script>
     <script src="scripts/app/home/home.controller.js"></script>
-    <script src="scripts/app/shared/sidebar/home/homeSidebar.controller.js"></script>
-    <script src="scripts/app/shared/sidebar/home/homeSidebar.js"></script>
+    <script src="scripts/app/home/timeline/sidebar/homeSidebar.controller.js"></script>
+    <script src="scripts/components/auth/services/home.service.js"></script>
     <script src="scripts/components/auth/services/tag.service.js"></script>
     <script src="scripts/components/auth/services/status.service.js"></script>
     <script src="scripts/components/auth/services/group.service.js"></script>
-    <script src="scripts/app/home/timeline/statusList.controller.js"></script>
+    <script src="scripts/app/home/timeline/statuslist/statusList.controller.js"></script>
     <script src="scripts/app/home/presentation/presentation.js"></script>
     <script src="scripts/app/home/presentation/welcome.controller.js"></script>
     <script src="scripts/app/shared/filters/EmoticonFilter.js"></script>
     <script src="scripts/app/shared/filters/MarkdownFilter.js"></script>
     <script src="assets/js/marked/marked.js"></script>
     <script src="scripts/app/shared/configs/MarkedConfig.js"></script>
+    <script src="scripts/app/home/timeline/timeline/timeline.js"></script>
+    <script src="scripts/app/home/timeline/mentions/mentions.js"></script>
 
 </body>
 </html>
