--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -211,6 +211,7 @@
     <script src="scripts/app/shared/configs/MarkedConfig.js"></script>
     <script src="scripts/app/home/timeline/timeline/timeline.js"></script>
     <script src="scripts/app/home/timeline/mentions/mentions.js"></script>
+    <script src="scripts/app/home/timeline/favorites/favorites.js"></script>
 
 </body>
 </html>
