Added tag functionality. Resolved issue with timeline headers.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,9 +20,6 @@
 
        <link rel="stylesheet" href="assets/styles/tatami.css">
 
-
-        <link rel="stylesheet" href="assets/styles/tatami.css">
-
         <!-- endbuild -->
 
         <style>
@@ -212,6 +209,8 @@
     <script src="scripts/app/home/timeline/timeline/timeline.js"></script>
     <script src="scripts/app/home/timeline/mentions/mentions.js"></script>
     <script src="scripts/app/home/timeline/favorites/favorites.js"></script>
+    <script src="scripts/app/home/timeline/tag/tag.js"></script>
+    <script src="scripts/app/home/timeline/tag/tagHeader.controller.js"></script>
 
 </body>
 </html>
