--- a/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
+++ b/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
@@ -67,8 +67,9 @@
                     <span ng-click="followTag(tag, $index)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="label little-padding pointer pull-right" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
                         <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                     </span>
+                    <div ng-class="tag.followed ? false : true"></div>
                     <span class="glyphicon" ng-class="tag.trendingUp ? 'glyphicon-arrow-up' : 'glyphicon-arrow-down'"></span>
-                    <a ui-sref="home.home.tag({ tag: tag.name })">#{{ tag.name }}</a>
+                    <a ui-sref="tag({ tag: tag.name })">#{{ tag.name }}</a>
                 </div>
             </div>
         </div>
